--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/ValidationSummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/ValidationSummary.cshtml
@@ -6,7 +6,7 @@
 var hasWarnings = Model.HasWarnings();
 }
 
-<div class="error-summary @(!Model.HasErrors() ? "sfa-hide" : "")" role="group" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
+<div id="error-summary" class="error-summary @(!Model.HasErrors() ? "sfa-hide" : "")" role="group" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
 
     <h1 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
         Message to alert the user to a problem goes here
@@ -41,7 +41,7 @@ var hasWarnings = Model.HasWarnings();
 
 </div>
 
-<div class="warning-summary @(!hasWarnings ? "sfa-hide" : "")" role="group" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
+<div id="warning-summary" class="warning-summary @(!hasWarnings ? "sfa-hide" : "")" role="group" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
 
     <h1 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
         Message to alert the user to a problem goes here
