--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
@@ -8,7 +8,7 @@
     ViewBag.Title = "Recruit an Apprentice - Check employer information";
 
     var saveButtonText = (Model.Status == VacancyStatus.Referred || Model.ComeFromPreview) &&
-            Model.EmployerApprenticeshipLocation == VacancyLocationOption.Main ? "Save and return to Preview" : "Save and continue";
+            Model.EmployerApprenticeshipLocation == VacancyLocationType.SpecificLocation ? "Save and return to Preview" : "Save and continue";
 }
 
 <div class="grid-wrapper">
