ra-400: Get nationwide mapping.

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/EmployerInformation.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/EmployerInformation.cshtml
@@ -6,7 +6,7 @@
 @{
     ViewBag.Title = "Recruit an Apprentice - Check employer information";
 
-    var saveButtonText = Model.EmployerApprenticeshipLocation == VacancyLocationType.SpecificLocation ? "Save" : "Save and continue";
+    var saveButtonText = Model.VacancyLocationType == VacancyLocationType.SpecificLocation ? "Save" : "Save and continue";
 }
 
 <div class="grid-wrapper">
