--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_searchResults.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_searchResults.cshtml
@@ -113,7 +113,7 @@ else
             foreach (var vacancy in Model.Vacancies)
             {
                 var webTrendItemPositionTracker = "Webtrends.multiTrack({ element: this, argsa: ['DCS.dcsuri', '/apprenticeships/results/itemposition/" + vacancy.Id + "', 'WT.dl', '99', 'WT.ti', 'Apprenticeships Search – Item Position Clicked', 'DCSext.ipos', '" + itemPosition + "'] })";
-                <li class="sfa-xlarge-bottom-margin">
+                <li class="search-result sfa-xlarge-bottom-margin">
                     <div class="grid-row">
                         <div class="column-full">
                             <h1 class="heading-large no-margins">
@@ -131,20 +131,23 @@ else
                             <p class="font-xsmall no-margins secondary-text">
                                 @if (vacancy.VacancyLocationType == ApprenticeshipLocationType.NonNational)
                                 {
-                                    <text>(Added @vacancy.PostedDate.ToFriendlyDaysAgo()</text>
-                                    if (vacancy.NumberOfPositions == 1)
-                                    {
+                                    <span id="posted-date-@vacancy.Id">(Added @vacancy.PostedDate.ToFriendlyDaysAgo()</span>
+                                    <span id="number-of-positions-@vacancy.Id">
+                                    @if (vacancy.NumberOfPositions == 1)
+                                    {   
                                         <text>- 1 position available)</text>
                                     }
                                     else
                                     {
                                         <text>- @vacancy.NumberOfPositions positions available)</text>
                                     }
+                                        </span>
                                 }
                                 else
                                 {
                                     <text>(Added @vacancy.PostedDate.ToFriendlyDaysAgo())</text>
                                 }
+
                             </p>
                             <p data-show="DisplayDescription" class="@(!Model.VacancySearch.DisplayDescription ? "toggle-content" : "")">
                                 @vacancy.Description
@@ -209,19 +212,19 @@ else
                         }
                     </div>
 
-                    @*@if (ViewBag.IsCandidateActivated != null && ViewBag.IsCandidateActivated)
+                    @if (ViewBag.IsCandidateActivated != null && ViewBag.IsCandidateActivated)
                         {
                             var applicationStatus = vacancy.CandidateApplicationStatus.HasValue
                                 ? vacancy.CandidateApplicationStatus.ToString()
                                 : "Unsaved";
 
-                            <div class="top-align ta-right width-all-1-4">
+                            <div class="save-vacancy">
                                 <a href="#" id="save-vacancy-link-@vacancy.Id" class="hidden fake-link link-unimp save-vacancy-link" data-vacancy-id="@vacancy.Id" data-application-status="@applicationStatus"><i class="fa"></i></a>
                                 @Html.ActionLink("Resume", "Resume", "ApprenticeshipApplication", new {id = vacancy.Id}, new {@class = "hidden resume-link", @id = "resume-link-" + @vacancy.Id})
                                 <p id="applied-label-@vacancy.Id" class="hidden applied-label"><i class="fa fa-check"></i>Applied
                                 </p>
                             </div>
-                        }*@
+                        }
 
 
                 </li>
