--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
@@ -108,3 +108,15 @@ iframe, object, embed {
 .secondary-text {
     color: $secondary-text-colour;
 }
+
+.search-result {
+    position: relative;
+}
+
+.save-vacancy {
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin-right: 10px;
+    margin-top: 10px;
+}
