ra-400: save number of positions.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
@@ -38,6 +38,7 @@
         var comeFromPreview = "@Model.ComeFromPreview.ToString()";
 
         $("#NumberOfPositionsJS").attr("id", "NumberOfPositions").attr("Name", "NumberOfPositions");
+        $("#NumberOfPositionsNWJS").attr("id", "NumberOfPositionsNationwide").attr("Name", "NumberOfPositionsNationwide");
 
         $("#NonAnonymousEmployerJS").attr("id", "NonAnonymousEmployer").attr("Name", "NonAnonymousEmployer");
         $("#AnonymousEmployerJS").attr("id", "AnonymousEmployer").attr("Name", "AnonymousEmployer");
