--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_Layout.cshtml
@@ -198,39 +198,86 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </noscript>
         }
     </div>
+    <footer class="group js-footer" id="footer" role="contentinfo">
+        <div class="footer-wrapper">
+            @*<div class="footer-categories">
+                <div class="footer-explore">
+                    <h2>Services and information</h2>
 
-    <footer class="gov-border" role="contentinfo">
-        <div class="footer__wrapper">
-            <div class="footer__meta">
-                <ul class="footer__nav">
-                    <li class="small-btm-margin">
-                        <a class="footer__link bold-medium" href='@Url.RouteUrl(CandidateRouteNames.Helpdesk)'>Contact us</a>
-                        <a class="footer__link bold-medium" href='@Url.RouteUrl(CandidateRouteNames.Feedback)'>Give feedback</a>
-                    </li>
-                    <li class="footer__link"><a href='@Url.RouteUrl(CandidateRouteNames.Privacy)'>Privacy and cookies</a></li>
-                    <li class="footer__link"><a href='@Url.RouteUrl(CandidateRouteNames.Terms)'>Terms and conditions</a></li>
-                    <li class="footer__link">Built by the <a href="http://gov.uk/sfa" target="_blank">Skills Funding Agency</a></li>
-                    <li class="footer__ogl"><a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/2" class="ir ogl-logo">OGL</a>All content is available under the <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/2">Open Government Licence v2.0</a>, except where otherwise stated</li>
-                </ul>
-                <a class="footer__copyright" href="http://www.nationalarchives.gov.uk/information-management/our-services/crown-copyright.htm" target="_blank">
-                    <img src="@Url.CdnImage("govuk-crest-2x.png")" width="125" height="102" alt="Crown copyright logo">
-                    <p>&copy; Crown copyright</p>
-                </a>
+                    <ul>
+                        <li><a href="/browse/benefits">Benefits</a></li>
+                        <li><a href="/browse/births-deaths-marriages">Births, deaths, marriages and care</a></li>
+                        <li><a href="/browse/business">Business and self-employed</a></li>
+                        <li><a href="/browse/childcare-parenting">Childcare and parenting</a></li>
+                        <li><a href="/browse/citizenship">Citizenship and living in the UK</a></li>
+                        <li><a href="/browse/justice">Crime, justice and the law</a></li>
+                        <li><a href="/browse/disabilities">Disabled people</a></li>
+                        <li><a href="/browse/driving">Driving and transport</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="/browse/education">Education and learning</a></li>
+                        <li><a href="/browse/employing-people">Employing people</a></li>
+                        <li><a href="/browse/environment-countryside">Environment and countryside</a></li>
+                        <li><a href="/browse/housing-local-services">Housing and local services</a></li>
+                        <li><a href="/browse/tax">Money and tax</a></li>
+                        <li><a href="/browse/abroad">Passports, travel and living abroad</a></li>
+                        <li><a href="/browse/visas-immigration">Visas and immigration</a></li>
+                        <li><a href="/browse/working">Working, jobs and pensions</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-inside-government">
+                    <h2>Departments and policy</h2>
+
+                    <ul>
+                        <li><a href="/government/how-government-works">How government works</a></li>
+                        <li><a href="/government/organisations">Departments</a></li>
+                        <li><a href="/government/world">Worldwide</a></li>
+                        <li><a href="/government/policies">Policies</a></li>
+                        <li><a href="/government/publications">Publications</a></li>
+                        <li><a href="/government/announcements">Announcements</a></li>
+                    </ul>
+                </div>
+                <hr>
+            </div>*@
+
+            <div class="footer-meta">
+                <div class="footer-meta-inner">
+                    <h2 class="visuallyhidden">Support links</h2>
+                    <ul>
+                        <li><a href="/help">Help</a></li>
+
+                        <li><a href="@Url.RouteUrl(CandidateRouteNames.Privacy)">Privacy and cookies</a></li>
+                        <li><a href="@Url.RouteUrl(CandidateRouteNames.Helpdesk)">Contact</a></li>
+                    	<li><a href="@Url.RouteUrl(CandidateRouteNames.Terms)">Terms and conditions</a></li>
+                        <li>
+                            Built by the <a href="https://www.gov.uk/sfa">Skills Funding Agency</a>
+                        </li>
+                    </ul>
+
+
+
+                    <div class="open-government-licence">
+                        <p class="logo">
+                            <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence</a>
+                        </p>
+                        <p>
+                            All content is available under the <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence v3.0</a>, except where otherwise stated
+                        </p>
+                    </div>
+                </div>
+
+                <div class="copyright">
+                    <a href="http://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/copyright-and-re-use/crown-copyright/">© Crown copyright</a>
+                </div>
+
                 @Html.Partial("_AboutDisguised")
-            </div>
-            <div class="toggle-content hide-nojs show-print nobreak-print">
-                <h3 class="heading-small">Contact the Skills Funding Agency helpdesk</h3>
-                <p class="small-btm-margin">Telephone (free): 0800 015 0400</p>
             </div>
         </div>
     </footer>
 
-    @if (ViewBag.ShowAbout != null && ViewBag.ShowAbout == true)
-    {
-        @Html.Partial("_AboutFull")
-    }
+    <div id="global-app-error" class="app-error hidden"></div>
 
-    <!-- Placed at the end of the document so the pages load faster -->
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/fastclick")
     @Scripts.Render("~/bundles/underscore")
